Fixed ShutdownHandler in jetty-core